crates/mold_parser/src/snapshots/mold_parser__tests__all_subquery.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..74
  SELECT_STMT@0..74
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..23
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      TABLE_REF@14..23
        IDENT@14..22 "products"
        WHITESPACE@22..23 " "
    WHERE_CLAUSE@23..74
      WHERE_KW@23..28 "WHERE"
      WHITESPACE@28..29 " "
      ALL_EXPR@29..74
        COLUMN_REF@29..35
          IDENT@29..34 "price"
          WHITESPACE@34..35 " "
        GT@35..36 ">"
        WHITESPACE@36..37 " "
        ALL_KW@37..40 "ALL"
        L_PAREN@40..41 "("
        SELECT_STMT@41..73
          SELECT_KW@41..47 "SELECT"
          WHITESPACE@47..48 " "
          SELECT_ITEM_LIST@48..58
            SELECT_ITEM@48..58
              COLUMN_REF@48..58
                IDENT@48..57 "min_price"
                WHITESPACE@57..58 " "
          FROM_CLAUSE@58..73
            FROM_KW@58..62 "FROM"
            WHITESPACE@62..63 " "
            TABLE_REF@63..73
              IDENT@63..73 "categories"
        R_PAREN@73..74 ")"
