crates/mold_parser/src/snapshots/mold_parser__tests__any_array.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..50
  SELECT_STMT@0..50
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..20
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      TABLE_REF@14..20
        IDENT@14..19 "users"
        WHITESPACE@19..20 " "
    WHERE_CLAUSE@20..50
      WHERE_KW@20..25 "WHERE"
      WHITESPACE@25..26 " "
      ANY_EXPR@26..50
        COLUMN_REF@26..29
          IDENT@26..28 "id"
          WHITESPACE@28..29 " "
        EQ@29..30 "="
        WHITESPACE@30..31 " "
        ANY_KW@31..34 "ANY"
        L_PAREN@34..35 "("
        ARRAY_EXPR@35..49
          ARRAY_KW@35..40 "ARRAY"
          L_BRACKET@40..41 "["
          LITERAL@41..42
            INTEGER@41..42 "1"
          COMMA@42..43 ","
          WHITESPACE@43..44 " "
          LITERAL@44..45
            INTEGER@44..45 "2"
          COMMA@45..46 ","
          WHITESPACE@46..47 " "
          LITERAL@47..48
            INTEGER@47..48 "3"
          R_BRACKET@48..49 "]"
        R_PAREN@49..50 ")"
