crates/mold_parser/src/snapshots/mold_parser__tests__cte.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..52
  SELECT_STMT@0..52
    WITH_CLAUSE@0..35
      WITH_KW@0..4 "WITH"
      WHITESPACE@4..5 " "
      CTE@5..35
        IDENT@5..8 "cte"
        WHITESPACE@8..9 " "
        AS_KW@9..11 "AS"
        WHITESPACE@11..12 " "
        L_PAREN@12..13 "("
        SELECT_STMT@13..33
          SELECT_KW@13..19 "SELECT"
          WHITESPACE@19..20 " "
          SELECT_ITEM_LIST@20..23
            SELECT_ITEM@20..23
              COLUMN_REF@20..23
                IDENT@20..22 "id"
                WHITESPACE@22..23 " "
          FROM_CLAUSE@23..33
            FROM_KW@23..27 "FROM"
            WHITESPACE@27..28 " "
            TABLE_REF@28..33
              IDENT@28..33 "users"
        R_PAREN@33..34 ")"
        WHITESPACE@34..35 " "
    SELECT_KW@35..41 "SELECT"
    WHITESPACE@41..42 " "
    SELECT_ITEM_LIST@42..44
      SELECT_ITEM@42..44
        STAR_EXPR@42..44
          STAR@42..43 "*"
          WHITESPACE@43..44 " "
    FROM_CLAUSE@44..52
      FROM_KW@44..48 "FROM"
      WHITESPACE@48..49 " "
      TABLE_REF@49..52
        IDENT@49..52 "cte"
